--- a/src/component/Login/Login.css
+++ b/src/component/Login/Login.css
@@ -1,11 +1,7 @@
 
 
-.container-fluid{
+.sec-pad1{
     padding:50px !important;
-}
-.container-fluid .row:nth-child(1){
-    justify-content: space-between;
-    /* align-items: center; */
 }
 .logo1{
     padding-bottom: 100px;
@@ -13,7 +9,8 @@
 .logo1 img{
     width: 80%;
 }
-.col-md-4{
+
+.sec-pad2{
     padding-top: 50px;
 }
 .form1{
@@ -63,7 +60,14 @@
     margin-left: unset;
     width: unset;
 }
-.MuiButton-root{
+
+.full-button{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.full-button button {
     padding: 12px 0 !important;
     text-transform: unset !important;
     font-weight: 500 !important;
@@ -73,8 +77,7 @@
     background-color: #002B66 !important;
     border-radius: 8px !important;
 }
-.MuiButton-root:hover{
-    /* border: 1px solid #002B66 !important; */
+.full-button button:hover {
     background-color: #CDDC39 !important;
     color: #002B66 !important;
 }
